[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://sprites/HUD/coin_gold.png" type="Texture" id=2]
[ext_resource path="res://probs/fade.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/HUD/lineDark/lineDark09.png" type="Texture" id=4]
[ext_resource path="res://sprites/HUD/lineDark/lineDark42.png" type="Texture" id=5]
[ext_resource path="res://sprites/HUD/lineDark/lineDark37.png" type="Texture" id=6]
[ext_resource path="res://sprites/HUD/lineDark/lineDark12.png" type="Texture" id=7]
[ext_resource path="res://sprites/HUD/lineDark/lineDark14.png" type="Texture" id=8]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Chocolate Bar Demo.otf"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 55.6507, 53.0007 )
texture = ExtResource( 2 )

[node name="txtMoeda" type="Label" parent="."]
margin_left = 92.7512
margin_top = 34.4504
margin_right = 165.751
margin_bottom = 86.4504
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "x 0"

[node name="txtMoeda2" type="Label" parent="."]
margin_left = 92.7512
margin_top = 26.5003
margin_right = 165.751
margin_bottom = 78.5003
custom_fonts/font = SubResource( 2 )
text = "x 0"

[node name="fade" parent="." instance=ExtResource( 3 )]

[node name="btnPause" type="Button" parent="."]
editor/display_folded = true
margin_left = 467.668
margin_top = 17.0
margin_right = 548.668
margin_bottom = 90.0
flat = true

[node name="lineDark09" type="Sprite" parent="btnPause"]
position = Vector2( 38.4464, 36.1538 )
scale = Vector2( 1.53976, 1.46265 )
texture = ExtResource( 4 )

[node name="pause" type="Node2D" parent="."]
editor/display_folded = true
visible = false

[node name="ColorRect" type="ColorRect" parent="pause"]
margin_right = 1024.0
margin_bottom = 601.0
color = Color( 1, 1, 1, 0.576471 )

[node name="btnSair" type="Button" parent="pause"]
pause_mode = 2
editor/display_folded = true
margin_left = 907.259
margin_top = 25.8484
margin_right = 993.259
margin_bottom = 101.848
flat = true

[node name="Sprite" type="Sprite" parent="pause/btnSair"]
position = Vector2( 44.0449, 38.1722 )
texture = ExtResource( 5 )

[node name="btnStart" type="Button" parent="pause"]
pause_mode = 2
editor/display_folded = true
margin_left = 413.84
margin_top = 260.3
margin_right = 604.84
margin_bottom = 339.3
flat = true

[node name="Sprite" type="Sprite" parent="pause/btnStart"]
position = Vector2( 95.6481, 40.9906 )
scale = Vector2( 1.76127, 1.67291 )
texture = ExtResource( 6 )

[node name="btnSound" type="Button" parent="pause"]
pause_mode = 2
editor/display_folded = true
margin_left = 470.414
margin_top = 356.26
margin_right = 547.414
margin_bottom = 430.26
flat = true

[node name="anim" type="AnimatedSprite" parent="pause/btnSound"]
position = Vector2( 39.1033, 42.0253 )
scale = Vector2( 1.64934, 1.68992 )
frames = SubResource( 3 )
animation = "on"
[connection signal="pressed" from="btnPause" to="." method="_on_btnPause_pressed"]
[connection signal="pressed" from="pause/btnSair" to="." method="_on_btnSair_pressed"]
[connection signal="pressed" from="pause/btnStart" to="." method="_on_btnStart_pressed"]
[connection signal="pressed" from="pause/btnSound" to="." method="_on_btnSound_pressed"]
